<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright 2018 Keval Patel.
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~  http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?android:toolbarStyle">


        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:expandedTitleGravity="bottom|center"
            app:expandedTitleMarginBottom="100dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:title="@string/title_activity_support_development">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:theme="?android:toolbarStyle"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:behavior_overlapTop="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_large">

            <android.support.v7.widget.CardView
                android:id="@+id/donate_two_dollar_card"
                style="@style/CardViewStyle"
                android:foreground="?selectableItemBackground">

                <com.kevalpatel2106.common.view.BaseTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_heart_fill_red"
                    android:drawablePadding="@dimen/spacing_nano"
                    android:paddingBottom="@dimen/spacing_nano"
                    android:paddingTop="@dimen/spacing_nano"
                    android:text="@string/support_with_2_00" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/donate_five_dollar_card"
                style="@style/CardViewStyle"
                android:foreground="?selectableItemBackground">

                <com.kevalpatel2106.common.view.BaseTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_heart_fill_red"
                    android:drawablePadding="@dimen/spacing_nano"
                    android:paddingBottom="@dimen/spacing_nano"
                    android:paddingTop="@dimen/spacing_nano"
                    android:text="@string/support_with_5_00" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/donate_ten_dollar_card"
                style="@style/CardViewStyle"
                android:foreground="?selectableItemBackground">

                <com.kevalpatel2106.common.view.BaseTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_heart_fill_red"
                    android:drawablePadding="@dimen/spacing_nano"
                    android:paddingBottom="@dimen/spacing_nano"
                    android:paddingTop="@dimen/spacing_nano"
                    android:text="@string/support_with_10_00" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/donate_twenty_dollar_card"
                style="@style/CardViewStyle"
                android:foreground="?selectableItemBackground">

                <com.kevalpatel2106.common.view.BaseTextView
                    style="@style/Base.TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableEnd="@drawable/ic_heart_fill_red"
                    android:drawablePadding="@dimen/spacing_nano"
                    android:paddingBottom="@dimen/spacing_nano"
                    android:paddingTop="@dimen/spacing_nano"
                    android:text="@string/support_with_20_00" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
